libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-params-duplicates.jsonc
//@ run: fail
//@ description: fn/4 tuple params should fail to compile
[
  "::kernel::special_form::fn",
  { "#struct": {} },
  { "#struct": { "a": "Int", "a": "Int" } },
  //~^ ERROR `a` is already declared as a parameter
  "_",
  ["+", "a", "b"]
]
